--- a/apps/prometheus/base/kustomization.yaml
+++ b/apps/prometheus/base/kustomization.yaml
@@ -1,6 +1,22 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  annotations:
+    argocd.argoproj.io/sync-options: Prune=false
+    argocd.argoproj.io/sync-wave: "1"    
+  creationTimestamp: null
+  name: prometheus
+spec: {}
+status: {}
+
+---
+
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: observability
+namespace: prometheus
+metadata:
+  annotations:
+    argocd.argoproj.io/sync-wave: "2"    
 helmCharts:
 - name: prometheus
   includeCRDs: true
