--- a/apps/prometheus/base/prometheus_ns.yaml
+++ b/apps/prometheus/base/prometheus_ns.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Namespace
 metadata:
   annotations:
+    argocd.argoproj.io/sync-wave: "1"
     argocd.argoproj.io/sync-options: Prune=false
   creationTimestamp: null
   name: prometheus
