--- a/apps/prometheus/base/kustomization.yaml
+++ b/apps/prometheus/base/kustomization.yaml
@@ -1,5 +1,10 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+helmCharts:
+- name: prometheus
+  includeCRDs: true
+  releaseName: prometheus
+  version: 15.5.3
+  repo: https://prometheus-community.github.io/helm-charts
 resources:
 - prometheus_ns.yaml
-- prometheus_helm.yaml
