--- a/apps/prometheus/base/kustomization.yaml
+++ b/apps/prometheus/base/kustomization.yaml
@@ -4,6 +4,7 @@ helmCharts:
 - name: prometheus
   includeCRDs: true
   releaseName: prometheus
+  releaseNamespace: prometheus
   version: 15.5.3
   repo: https://prometheus-community.github.io/helm-charts
 resources:
