--- a/apps/traefik/base/kustomization.yaml
+++ b/apps/traefik/base/kustomization.yaml
@@ -1,10 +1,4 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: traefik
-helmCharts:
-- name: traefik
-  includeCRDs: true
-  releaseName: traefik
-  version: 23.0.1
-  repo: https://traefik.github.io/charts
-resources: []
+resources:
+- traefik_helm.yaml
