expose traefik  dashboard over https

--- a/apps/traefik/base/traefik.yaml
+++ b/apps/traefik/base/traefik.yaml
@@ -242,7 +242,7 @@ metadata:
     app.kubernetes.io/instance: traefik-traefik
 spec:
   entryPoints:
-    - traefik
+    - websecure
   routes:
     - match: PathPrefix(`/dashboard`) || PathPrefix(`/api`)
       kind: Rule
