Revert "expose traefik  dashboard over https"
This reverts commit 8fd76605eb2c25365754825fe833deb3e7be0b35.

--- a/apps/traefik/base/traefik.yaml
+++ b/apps/traefik/base/traefik.yaml
@@ -242,7 +242,7 @@ metadata:
     app.kubernetes.io/instance: traefik-traefik
 spec:
   entryPoints:
-    - websecure
+    - traefik
   routes:
     - match: PathPrefix(`/dashboard`) || PathPrefix(`/api`)
       kind: Rule
