expose on http and https as well

--- a/apps/traefik/base/traefik.yaml
+++ b/apps/traefik/base/traefik.yaml
@@ -243,6 +243,8 @@ metadata:
 spec:
   entryPoints:
     - traefik
+    - web
+    - websecure
   routes:
     - match: PathPrefix(`/dashboard`) || PathPrefix(`/api`)
       kind: Rule
