expose on http and https as well

--- a/apps/traefik/base/traefik.yaml
+++ b/apps/traefik/base/traefik.yaml
@@ -193,13 +193,12 @@ spec:
             - name: tmp
               mountPath: /tmp
           args:
-            - "--global.checknewversion"
-            - "--global.sendanonymoususage"
             - "--entrypoints.metrics.address=:9100/tcp"
             - "--entrypoints.traefik.address=:9000/tcp"
             - "--entrypoints.web.address=:8000/tcp"
             - "--entrypoints.websecure.address=:8443/tcp"
             - "--api.dashboard=true"
+            - "--api.insecure=true"
             - "--ping=true"
             - "--metrics.prometheus=true"
             - "--metrics.prometheus.entrypoint=metrics"
