set loglevel for traefik to debug

--- a/apps/traefik/base/traefik.yaml
+++ b/apps/traefik/base/traefik.yaml
@@ -205,6 +205,7 @@ spec:
             - "--providers.kubernetescrd"
             - "--providers.kubernetesingress"
             - "--entrypoints.websecure.http.tls=true"
+            - "--log.level=DEBUG"
       volumes:
         - name: data
           emptyDir: {}
