enable access logs for traefik.yaml

--- a/apps/traefik/base/traefik.yaml
+++ b/apps/traefik/base/traefik.yaml
@@ -206,6 +206,7 @@ spec:
             - "--providers.kubernetesingress"
             - "--entrypoints.websecure.http.tls=true"
             - "--log.level=DEBUG"
+            - "--accesslog=true"
       volumes:
         - name: data
           emptyDir: {}
