--- a/apps/traefik/base/traefik.yaml
+++ b/apps/traefik/base/traefik.yaml
@@ -232,23 +232,23 @@ spec:
   controller: traefik.io/ingress-controller
 ---
 # Source: traefik/templates/dashboard-ingressroute-patch.yaml
-apiVersion: traefik.io/v1alpha1
-kind: IngressRoute
-metadata:
-  name: traefik-dashboard
-  namespace: traefik
-  annotations:
-  labels:
-    app.kubernetes.io/name: traefik
-    app.kubernetes.io/instance: traefik-traefik
-spec:
-  entryPoints:
-    - traefik
-    - web
-    - websecure
-  routes:
-    - match: PathPrefix(`/dashboard`) || PathPrefix(`/api`)
-      kind: Rule
-      services:
-        - name: api@internal
-          kind: TraefikService
+#apiVersion: traefik.io/v1alpha1
+#kind: IngressRoute
+#metadata:
+#  name: traefik-dashboard
+#  namespace: traefik
+#  annotations:
+#  labels:
+#    app.kubernetes.io/name: traefik
+#    app.kubernetes.io/instance: traefik-traefik
+#spec:
+#  entryPoints:
+#    - traefik
+#    - web
+#    - websecure
+#  routes:
+#    - match: PathPrefix(`/dashboard`) || PathPrefix(`/api`)
+#      kind: Rule
+#      services:
+#        - name: api@internal
+#          kind: TraefikService
