--- a/bootstrap/argo-cd/kustomization.yaml
+++ b/bootstrap/argo-cd/kustomization.yaml
@@ -1,6 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 configMapGenerator:
-- behavior: merge
+- name: argocd-cm
+  behavior: merge
   literals:
   - kustomize.buildOptions="--enable-alpha-plugins --enable-helm"
   - |
@@ -11,7 +12,12 @@ configMapGenerator:
       usernameSecret:
         key: git_username
         name: autopilot-secret
-  name: argocd-cm
+
+- name: argocd-cmd-params-cm
+  behavior: merge
+  literals:
+    - "server.insecure=true"
+
 kind: Kustomization
 namespace: argocd
 resources:
