--- a/apps/traefik/overlays/apps/ingressroute-patch.yaml
+++ b/apps/traefik/overlays/apps/ingressroute-patch.yaml
@@ -1,3 +1,5 @@
 - op: replace
   path: /spec/routes/0/match
-  value: PathPrefix(`/dashboard`) || PathPrefix(`/api`)
+  value:  >-
+    Host(`traefik.example.com`) &&
+    (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
