--- a/apps/traefik/base/traefik.yaml
+++ b/apps/traefik/base/traefik.yaml
@@ -243,10 +243,8 @@ metadata:
     app.kubernetes.io/name: traefik
     app.kubernetes.io/instance: traefik-traefik
 spec:
-#  entryPoints:
-#    - traefik
-#    - web
-#    - websecure
+  entryPoints:
+    - websecure
   routes:
     - match: >-
         Host(`traefik.example.com`) &&
