--- a/apps/traefik/base/traefik.yaml
+++ b/apps/traefik/base/traefik.yaml
@@ -233,7 +233,7 @@ spec:
   controller: traefik.io/ingress-controller
 ---
 # Source: traefik/templates/dashboard-ingressroute-patch.yaml
-apiVersion: traefik.io/v1alpha1
+apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
   name: traefik-dashboard
