--- a/apps/traefik/base/traefik.yaml
+++ b/apps/traefik/base/traefik.yaml
@@ -273,3 +273,18 @@ spec:
         - name: nginx-deployment
           namespace: default
           port: 80
+
+      middlewares:
+        - name: unknown-site-replacepath
+          namespace: traefik
+          kind: Middleware
+
+---
+# Replace the path of the request before forwarding it
+apiVersion: traefik.io/v1alpha1
+kind: Middleware
+metadata:
+  name: unknown-site-replacepath
+spec:
+  replacePath:
+    path: /
