--- a/apps/traefik/base/traefik.yaml
+++ b/apps/traefik/base/traefik.yaml
@@ -276,7 +276,7 @@ spec:
 
       middlewares:
         - name: unknown-site-replacepath
-          namespace: traefik
+          namespace: default
           kind: Middleware
 
 ---
@@ -285,6 +285,7 @@ apiVersion: traefik.io/v1alpha1
 kind: Middleware
 metadata:
   name: unknown-site-replacepath
+  namespace: default
 spec:
   replacePath:
     path: /
